# gmail-auto-label

./: Cargo.toml  README.md  README_ZH.md  RELEASING.md  rustfmt.toml
.github/workflows/: ci.yml
src/: app.rs  cache.rs  classify.rs  command.rs  errors.rs  gog.rs  lib.rs  main.rs  models.rs  utils.rs
